# tmpltr

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml
docs/: tmpltr_guide.md
examples/: angebot.schema.json  config.schema.json  config.toml  example-content.toml
examples/brand/: brand.schema.json  brand.toml
scripts/: copy_config_schema.sh
src/: brand.rs  cache.rs  config.rs  content.rs  error.rs  lib.rs  main.rs  markdown.rs  template.rs  typst.rs
src/cli/: commands.rs  mod.rs
templates/: agenda.toml  agenda.typ  angebot.toml  angebot.typ  example_1.toml  example_1.typ  example_2.toml  example_2.typ  protokoll.toml  protokoll.typ  simple-quote.toml  simple-quote.typ
typst_templates/: example-template.typ  tmpltr-lib.typ
