[package]
name = "tmpltr"
version = "0.1.0"
edition = "2021"
description = "Template-based document generation CLI"
authors = ["ByteOwlz"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Configuration
config = { version = "0.15", features = ["toml"] }
dirs = "5.0"
shellexpand = "3.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Async/Process
tokio = { version = "1.0", features = ["full"] }

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Markdown parsing
pulldown-cmark = "0.12"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex for template parsing
regex = "1.10"

# Binary lookup
which = "6.0"

# Temp files
tempfile = "3.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
